# KaggleChallenges

./: .dockerignore  .env  .env_template  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  airflow_setup.sh  docker-compose.yml  entrypoint.sh  genindex.html  objects.inv  pyproject.toml  requirements.txt  run_pytest.sh  search.html
.github/workflows/: main.yml
_sources/docs/: mnist.ipynb
assets/: trailer.drawio
debezium/: Dockerfile
docs/: index.html
mini_book/: _config.yml  _toc.yml
mini_book/_build/.doctrees/: environment.pickle
mini_book/_build/.doctrees/docs/: index.doctree  mnist.doctree  mnist_nb.doctree
mini_book/_build/.jupyter_cache/: global.db
mini_book/_build/.jupyter_cache/executed/977be37fa8af27680a717bb0cc9f5584/: base.ipynb
mini_book/_build/.jupyter_cache/executed/e3e9c4cb7bba0b8b63a3f9ddc98ec8f2/: base.ipynb
mini_book/_build/html/: .buildinfo  genindex.html  search.html  searchindex.js
mini_book/_build/html/_sources/docs/: mnist.ipynb  mnist.md  mnist_nb.ipynb
mini_book/_build/html/_static/: basic.css  copybutton.js  documentation_options.js  panels-variables.06eb56fa6e07937060861dad626602ad.css  pygments.css  togglebutton.css  webpack-macros.html
mini_book/_build/html/_static/css/: index.c5995385ac14fb8791e8eb36b4908be2.css  theme.css
mini_book/_build/html/_static/js/: index.1c5a1a01449ed65a7b51.js
mini_book/_build/html/docs/: index.html  mnist.html  mnist_nb.html
mini_book/_build/jupyter_execute/docs/: mnist.py  mnist.txt  mnist_nb.ipynb  mnist_nb.py
mini_book/docs/: index.md  mnist.md
mlflow_vol/: create_bucket.py
postgres/: Dockerfile
postgres/sql/: setup.sql
src/: loki.ipynb  setup.py
src/000_mnist/: README.md  main.ipynb  main.py
src/001_titanic/: main.ipynb  main.py  profile_report.html
src/002_s&p500/: main.ipynb  main.py
src/003_fashion_mnist/: main.ipynb
src/004_amazon_reviews_sentiment/: main.ipynb
src/initialization/: setup_db.py
src/kcu/: __init__.py  boilerplates.py  capsules.py  challenges.py  dataset.py  functiontransform.py  logging_utils.py  models.py  test.py  utils.py  visualization.py
src/kcu/vision/classification/: classification.py  utils_classification.py
src/kcu/vision/detection/: detection.py
src/kcu/vision/segmentation/: segmentation.py
src/notebooks/: 00_Intro.ipynb  00_intro.ipynb  01_generic_etl.ipynb
src/notebooks/projects/000_mnist/: main.ipynb
src/notebooks/projects/000_wine/: main.ipynb
src/notebooks/projects/001_titanic/: main.ipynb
src/notebooks/tutorials/: 00_Intro.ipynb  00_logging.ipynb
src/utils/: __init__.py  boilerplates.py  models.py  test.py
ubuntu/: Dockerfile  app.py  config.py  entrypoint.sh  main.ipynb  ml_celery.py  ml_service.py
ubuntu/pages/: 01_kafka.py
