[tool.poetry]
name = "kcu"
version = "0.1.0"
description = ""
authors = ["Florian Teich <florianteich@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "==3.9.*"
numpy = "^1.24.1"
scipy = "^1.9.3"
pandas = "^1.3.0"
apscheduler = "^3.9.1.post1"
coverage = "^7.0.1"
pyspark = "^3.3.1"
findspark = "^2.0.1"
scikit-learn = "^1.2.0"
isort = "^5.11.4"
matplotlib = "^3.6.2"
mypy = "^0.991"
nbstripout = "^0.6.1"
pyyaml = "^6.0"
psycopg2-binary = "^2.9.5"
pytest = "^7.2.0"
seaborn = "^0.12.2"
sphinx = "^6.0.0"
sqlalchemy = "^1.4.45"
xgboost = "^1.7.2"
jupyter = "^1.0.0"
jupyterlab = "^3.5.2"
kafka-python = "^2.0.2"
minio = "^7.1.12"
mlflow = "^2.1.1"
great-expectations = "0.14.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
