[tool.poetry]
name = "kcu"
version = "0.1.0"
description = ""
authors = ["Florian Teich <florianteich@gmail.com>"]
readme = "README.md"
packages = [{include = "src/*"}]

[tool.poetry.dependencies]
python = ">=3.9.dev0,<3.9.7 || >3.9.7,<3.10.dev0"
numpy = "==1.24.3"
scipy = "==1.10.1"
pandas = "==1.5.3"
apscheduler = "==3.10.1"
coverage = "==7.2.5"
pyspark = "==3.4.0"
findspark = "==2.0.1"
scikit-learn = "==1.2.2"
isort = "==5.12.0"
matplotlib = "==3.7.1"
mypy = "==0.991"
nbstripout = "==0.6.1"
pyyaml = "==6.0"
psycopg2-binary = "==2.9.6"
pytest = "==7.3.1"
seaborn = "==0.12.2"
sphinx = "==6.2.1"
sqlalchemy = "==1.4.48"
xgboost = "==1.7.5"
jupyter = "==1.0.0"
jupyterlab = "==3.6.3"
kafka-python = "==2.0.2"
minio = "==7.1.14"
mlflow = "==2.3.2"
great-expectations = "==0.14.12"
pydantic = "==1.10.7"
requests = "==2.28.2"
redis = "==4.5.5"
celery = "==5.2.7"
dill = "==0.3.6"
streamlit = "==1.22.0"
fastapi = "==0.95.2"
python-logging-loki = "==0.3.1"
torch = {platform = "linux", url = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp39-cp39-linux_x86_64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
